<resources>
    <string name="app_name">Instant</string>
    <string name="title_activity_posts">PostsActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="feed">Feed</string>
    <string name="profile">Profile</string>
    <string name="post">Post</string>
    <string name="welcome">Welcome!</string>
    <string name="fullname">Full Name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="email">email</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Followingg</string>
    <string name="follow">Follow</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="biography">Biography</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="unfollow">Unfollow</string>
</resources>
